# vner

./: .gitignore  CMakeLists.txt
res/: post_proc.fs
res_dyn/books/test/: book.json
src/: game.cpp  game.h  game_basic.h  game_cfg.h
src/util/: arena.h  drawable.h  vec_ops.h
